# crawler

./: .env.example  .gitignore  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: cicd.yml
aura-historia-backend-api-client/: README.md  pyproject.toml
aura-historia-backend-api-client/aura_historia_backend_api_client/: __init__.py
aura-historia-backend-api-client/aura_historia_backend_api_client/models/: __init__.py  api_error.py  api_error_source.py  api_error_source_source_type.py  authenticity_data.py  complex_search_products_order.py  condition_data.py  currency_data.py  get_product_data.py  get_shop_data.py  (+54 more)
cdk/: app.py
cdk/stacks/: database.py  orchestration_lambda.py  orchestration_spider_lambda.py  queues.py  s3.py  shop_registration_lambda.py
data/: out1.md  out2.md  out3.md  out4.md
docs/: DYNAMODB_SCHEMA.md  ORCHESTRATION.md
local_development/: docker-compose.yml  podman-compose.yml
local_development/try_scripts/: try_scraper.py  try_spider.py
scripts/: antique_shop_finder.py  available_ssh_remotes.py  start_vllm_server.sh  traning_data_generator.py
scripts/data/: antique_shops_urls_domains.json  cached_search_results.json
scripts/generate_api_client/: README.md  script.py
src/app/: main.py
src/classifier/: test_model.py  train_model.py
src/strategies/: base.py  json_ld.py  microdata.py  opengraph.py  rdfa.py
tests/: conftest.py
tests/algorithms/: test_bfs_no_cycle.py
tests/strategies/: test_json_ld.py  test_microdata.py  test_opengraph.py
(+147 files in other folders)
