[project]
name = "cralwer"
version = "0.1.0"
description = "Crawler framework for asynchronous web scraping, data extraction, and analysis with Python. Supports modern libraries, AWS integration, and modular extensibility."
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiohttp-retry>=2.9.1",
    "aioresponses>=0.7.8",
    "asyncssh>=2.22.0",
    "aws-cdk-aws-appsync-alpha==2.10.0a0",
    "aws-cdk-aws-lambda-python-alpha>=2.14.0a0",
    "aws-cdk-lib==2.14.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.49",
    "botocore>=1.42.49",
    "constructs>=10.4.5",
    "crawl4ai>=0.8.0",
    "datasets>=4.5.0",
    "extruct>=0.18.0",
    "google-search-results>=2.4.2",
    "groq>=1.0.0",
    "iptocc",
    "langdetect>=1.0.9",
    "lxml>=5.4.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.21.0",
    "pandas==2.2.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "ruff>=0.15.1",
    "scikit-learn>=1.8.0",
    "selenium>=4.40.0",
    "six>=1.17.0",
    "streamlit>=1.54.0",
    "testcontainers>=4.14.1",
    "tldextract>=5.3.1",
    "torch>=2.4.0",
    "transformers>=5.1.0",
    "urllib3>=2.6.3",
    "vllm>=0.6.0",
    "w3lib>=2.4.0",
]
